Login Signup fix

--- a/styles/login.css
+++ b/styles/login.css
@@ -59,7 +59,7 @@
 .register .nav-tabs{
     margin-top: 3%;
     border: none;
-    background: #0062cc;
+    background: #9983E7;
     border-radius: 1.5rem;
     width: 28%;
     float: right;
@@ -77,8 +77,8 @@
 }
 .register .nav-tabs .nav-link.active{
     width: 100px;
-    color: #0062cc;
-    border: 2px solid #0062cc;
+    color: #9983E7;
+    border: 2px solid #9983E7;
     border-top-left-radius: 2rem;
     border-bottom-left-radius: 2rem;
 }
@@ -144,7 +144,7 @@
   /* Input focus */
   .form-control:focus {
     box-shadow: none;
-    border: 2px solid#2A58C4;
+    border: 2px solid#9983E7;
     
   
   }
@@ -167,7 +167,7 @@
   }
   
   select:focus {
-    border: 2px solid #2A58C4;
+    border: 2px solid #9983E7;
   }
   
   .form-label-group {
